tests/e2e/pass/m63_for_condition.ep
# EXIT: 5
fun main(): void {
    let value = 0
    for value < 5 {
        value += 1
    }
    os.ExitProcess(value)
}
