tests/e2e/fail/integer_literal_signed_hex_range.ep
# COMPILE_ERROR: integer literal is out of range for i8
fun main(): void {
    let value = 0xffi8
}
